<resources>
    <string name="app_name">PD Delivery</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <!--<string name="appbar_scrolling_view_behavior">App Behaviour</string>-->
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Delete Account</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">PD Delivery</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Create PD Account!</string>
    <string name="btn_link_to_login">Already registered. Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>prompt_password
    <string name="prompt_password">Enter Password</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Logout</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <!--side menu-->
    <string name="dashboard">Dashboard</string>
    <string name="my_delivery">My Shipments</string>
    <string name="track">Real-time Tracking</string>
    <string name="reports">Stats</string>
    <string name="settings">Settings</string>
</resources>