<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay"
                app:elevation="0dp">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimaryDark"
                    android:textColor="?attr/colorAccent"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:popupTheme="@style/ActionBar" />

            </android.support.design.widget.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <EditText
                    android:id="@+id/old_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/new_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_new_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/prompt_password"
                    android:imeActionId="32541"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/new_pass"
                    android:imeActionId="4322"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/changeEmail"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/btn_change"
                    android:textColor="@color/bg_buttons"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/changePass"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/btn_change"
                    android:textColor="@color/bg_buttons"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/send"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/btn_send"
                    android:textColor="@color/bg_buttons"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/remove"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/buttons"
                    android:text="@string/btn_remove"
                    android:textColor="@color/bg_buttons"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/change_email_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttons"
                    android:layout_marginTop="16dp"
                    android:text="@string/change_email"
                    android:textColor="@color/bg_buttons"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/change_password_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttons"
                    android:layout_marginTop="16dp"
                    android:text="@string/change_password"
                    android:textColor="@color/bg_buttons"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/sending_pass_reset_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttons"
                    android:layout_marginTop="16dp"
                    android:text="@string/send_password_reset_email"
                    android:textColor="@color/bg_buttons"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/remove_user_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttons"
                    android:layout_marginTop="16dp"
                    android:text="@string/remove_user"
                    android:textColor="@color/bg_buttons"
                    android:textStyle="bold" />

            </LinearLayout>
        </FrameLayout>
        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/drawer_view"
            app:headerLayout="@layout/nav_header">

            <Button
                android:id="@+id/sign_out"
                style="?android:textAppearanceSmall"
                android:icon="@drawable/ic_menu_signout"
                android:layout_width="@dimen/logout_wdt"
                android:layout_gravity="bottom"
                android:background="@drawable/buttons"
                android:textColor="@color/colorAccent"
                android:layout_margin="32dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_out"
                android:textStyle="bold" />
        </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>